--- a/index.html
+++ b/index.html
@@ -25,9 +25,28 @@
             background-color: #4CAF50;
             color: white;
             cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
         }
         button:hover {
             background-color: #45a049;
+        }
+        .loader {
+            display: none;
+            border: 4px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 4px solid #3498db;
+            width: 16px;
+            height: 16px;
+            animation: spin 1s linear infinite;
+            position: absolute;
+            left: 10px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
         .alert-box {
             margin-top: 20px;
@@ -74,7 +93,10 @@
 <body>
     <h1>CSV ID Difference Checker</h1>
     <input type="file" id="csvFile" accept=".csv">
-    <button id="runButton">Run</button>
+    <button id="runButton">
+        <div class="loader" id="loader"></div>
+        <span id="runText">Run</span>
+    </button>
 
     <div class="alert-box" id="alertBox">
         <h2>Different IDs</h2>
@@ -117,11 +139,17 @@
             const diffCount = document.getElementById('diffCount');
             const copyButton = document.getElementById('copyButton');
             const closeButton = document.getElementById('closeButton');
+            const runText = document.getElementById('runText');
+            const loader = document.getElementById('loader');
 
             if (fileInput.files.length === 0) {
                 alert('Please upload a CSV file.');
                 return;
             }
+
+            // Show loading state
+            runText.textContent = 'Loading...';
+            loader.style.display = 'inline-block';
 
             const reader = new FileReader();
             reader.onload = function(event) {
@@ -138,6 +166,10 @@
                     diffCount.textContent = '';
                     alertBox.style.display = 'block';
                 }
+
+                // Hide loading state
+                runText.textContent = 'Run';
+                loader.style.display = 'none';
             };
             reader.readAsText(fileInput.files[0]);
 
